--- a/exercicos/ex026/mq004/estilos/media-query.css
+++ b/exercicos/ex026/mq004/estilos/media-query.css
@@ -2,6 +2,94 @@
 
 /* todas as demais midias */
 
-@media print {
-    
+/* typical device breakpoints 
+------------------------------
+pequenas telas: até 600px
+Celular: 600 ate 768px
+tablet: 769px ate 992px
+Desktop: 992px ate 1200px
+grandes telas: acima de 1200px
+*/
+
+@media print { /* IMPRESSÃO */
+    body {
+        background-image: url(../imagens/back-print.jpg); /* desnecessario pois não imprime */
+    }
+
+    main {
+        width: 90vw;
+        border: 2px solid black;
+    }
+
+    main h1 {
+        text-shadow: none;
+        color: black;
+    }
+
+    main::after {
+        content: 'Essa impressao foi feito por RCWeb';
+        text-decoration: overline;
+    }
+
+    img#phone {display: none;}
+
+    img#tablet {display: none;}
+
+    img#print {display: block;}
+
+    img#pc {display: none;}
+
+    img#tv {display: none;}
+}
+
+@media screen and (min-width: 768px) and (max-width: 992px) { /* TABLET */
+    body {
+        background-image: url(../imagens/back-tablet.jpg);
+    }
+
+    img#phone {display: none;}
+
+    img#tablet {display: block;}
+
+    img#print {display: none;}
+
+    img#pc {display: none;}
+
+    img#tv {display: none;}
+}
+
+@media screen and (min-width: 992px) and (max-width: 1200px) { /* DESKTOP */
+    body {
+        background-image: url(../imagens/back-pc.jpg);
+    }
+
+    img#phone {display: none;}
+
+    img#tablet {display: none;}
+
+    img#print {display: none;}
+
+    img#pc {display: block;}
+
+    img#tv {display: none;}
+}
+
+@media screen and (min-width: 1200px) { /* TELAS GRANDES */
+    body {
+        background-image: url(../imagens/back-tv.jpg);
+    }
+
+    main {
+        width: 700px;
+    }
+
+    img#phone {display: none;}
+
+    img#tablet {display: none;}
+
+    img#print {display: none;}
+
+    img#pc {display: none;}
+
+    img#tv {display: block;}
 }
