--- a/exercicos/ex027/flex014-conteudoflex/style.css
+++ b/exercicos/ex027/flex014-conteudoflex/style.css
@@ -13,9 +13,15 @@ body {
     
 }
 
-p, h1, h2 {
+p {
     margin-bottom: 10px;
-    text-align: justify;
+   text-align: justify;
+}
+
+h1, h2 {
+    margin: 20px;
+    text-align: left;
+    line-height: 1.em;
 }
 
 header,section.normal {
@@ -26,5 +32,42 @@ header,section.normal {
 section.flex-content {
     background-color: rgb(160, 157, 157);
     padding: 20px;
+
+    display: flex;
+    flex-flow: column nowrap;
 }
 
+article.text-media {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+}
+
+article.media-text {
+    display: flex;
+    flex-flow: row wrap-reverse;
+    justify-content: space-between;
+}
+
+article > div.text {
+    flex: 1 1 500px;
+
+}
+
+article > div.media {
+    flex: 1 0 500px;
+
+}
+
+div.media > img {
+    display: block;
+    margin: auto;
+    width: 300px;
+    padding: 10px;
+}
+
+div.media > iframe {
+    display: block;
+    margin: auto;
+    padding-left: 10px;
+}
